--- a/.github/workflows/releaseExtension.yml
+++ b/.github/workflows/releaseExtension.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: 17
+          # Need this version otherwise the extension throw: java.lang.UnsupportedClassVersionError
+          # The version of the Java Runtime only recognizes class file versions up to 55.0 which is Java 11
+          java-version: 11
           cache: gradle
       - name: Check
         run: ./gradlew check
