--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,6 +1,13 @@
 name: CI Check
 
-on: [ push ]
+on:
+  push:
+    branches:
+      - feature/*
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   check:
@@ -8,11 +15,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
           cache: gradle
+
       - name: Check
         run: ./gradlew check
